# helloc

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake-single-platform.yml
src/: hello.c
tests/: test_hello.py
